syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.abellee.cniface.grpc.recognition";
option java_outer_classname = "RecognitionProto";
option objc_class_prefix = "CNIFACE";

package cniface;


service RecognitionService {
    rpc extractFeature (ExtractFeatureRequest) returns ( ExtractFeatureResponse) {}
    rpc similarity (SimilarityRequest) returns ( SimilarityeResponse) {}
}

message ExtractFeatureRequest {
    string faceImageBase64 = 1;
    repeated float kps = 2;
}

message ExtractFeatureResponse {
    int64 code = 1;
    string message = 2;
    string featureBase64 = 3;
}

message SimilarityRequest {
    string featureBase64_1 = 1;
    string featureBase64_2 = 2;
}

message SimilarityeResponse {
    int64 code = 1;
    string message = 2;
    float similarity = 3;
}

